--- a/portfolio.html
+++ b/portfolio.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Will Scoggins Portfolio</title>
+	<script src="https://kit.fontawesome.com/656a24da45.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" type="text/css" href="portfolio.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="/Users/willscoggins/Desktop/Website/fontawesome-free-5.13.1-web/css/all.min.css">
