--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
 <div class="row d-flex justify-content-around my-4">
 	<section class="Portfolio my-4 p-3 col-10 col-md-8 justify-content-center">
 		<div class="img-thumb">
-			<a href=""><img width="100%" src="CozyCabin.PNG" class="img-responsive img-center"></a>
+			<a href=" https://will-scoggins.github.io/Cozy_Cabin/"><img width="100%" src="CozyCabin.PNG" class="img-responsive img-center"></a>
 			 <h5 class="text-center align-self-center p-2">Tools Used: <br> <i class="fab fa-html5 mx-2 p-2"></i> <i class="fab fa-css3-alt mx-2 p-2"></i> <i class="fab fa-bootstrap mx-2 p-2"></i><a href=""><i class="fab fa-github mx-2 p-2"></i></a></h5>
 		</div>
 	</section>
