--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 	<h2 class="text-center m-4 p-4">My Portfolio</h2>
 	<hr>
 	<div class="row d-flex justify-content-around my-4">
-		<section class="Portfolio my-4 p-3 col-10 col-md-3">
+		<section class="Portfolio my-4 p-3 col-10 col-lg-3 col-md-8">
 			<div class="img-thumb Portfolio1 text-center flex-container">
 				<h4><a class="Title" href="">Cozy Cabin</a></h4>
 				<div>
@@ -83,7 +83,7 @@
 			</div>
 		</section>
 
-		<section class="Portfolio my-4 p-3 col-10 col-md-3">
+		<section class="Portfolio my-4 p-3 col-10 col-lg-3 col-md-8">
 			<div class="img-thumb Portfolio1 text-center flex-container">
 				<h4><a href="">Cozy Cabin</a></h4>
 				<div>
@@ -99,7 +99,7 @@
 			</div>
 		</section>
 
-		<section class="Portfolio my-4 p-3 col-10 col-md-3">
+		<section class="Portfolio my-4 p-3 col-10 col-lg-3 col-md-8">
 			<div class="img-thumb Portfolio1 text-center flex-container">
 				<h4><a href="">Cozy Cabin</a></h4>
 				<div>
